--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/viewInventoryFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.inventoryapp.mobile.ui.main.MainFragment"
-        android:label="main_fragment"
-        tools:layout="@layout/fragment_main" />
+        android:id="@+id/viewInventoryFragment"
+        android:name="com.inventoryapp.mobile.ui.main.ViewInventoryFragment"
+        android:label="fragment_view_inventory"
+        tools:layout="@layout/fragment_view_inventory" >
+        <action
+            android:id="@+id/action_viewInventoryFragment_to_uploadInventoryFragment"
+            app:destination="@id/uploadInventoryFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/uploadInventoryFragment"
+        android:name="com.inventoryapp.mobile.ui.main.UploadInventoryFragment"
+        android:label="fragment_upload_inventory"
+        tools:layout="@layout/fragment_upload_inventory" />
 </navigation>
