--- a/app/src/main/res/layout/fragment_upload_inventory.xml
+++ b/app/src/main/res/layout/fragment_upload_inventory.xml
@@ -50,6 +50,19 @@
         app:layout_constraintTop_toTopOf="@id/fragment_title"
         app:textAllCaps="true" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/add_item_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="32dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_title"
+        tools:listitem="@layout/view_holder_add_item"
+        tools:itemCount="4" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/search_button"
         android:layout_width="0dp"
@@ -73,6 +86,6 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/search_button"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/search_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
