--- a/app/src/main/res/layout/view_holder_list_item.xml
+++ b/app/src/main/res/layout/view_holder_list_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:background="@drawable/list_item_border"
-    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
