--- a/app/src/main/res/layout/fragment_upload_inventory.xml
+++ b/app/src/main/res/layout/fragment_upload_inventory.xml
@@ -52,14 +52,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/add_item_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="32dp"
+        android:paddingHorizontal="32dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_title"
+        app:layout_constraintBottom_toTopOf="@id/save_button"
         tools:listitem="@layout/view_holder_add_item"
         tools:itemCount="4" />
 
