--- a/app/src/main/res/layout/view_holder_list_item.xml
+++ b/app/src/main/res/layout/view_holder_list_item.xml
@@ -13,7 +13,7 @@
         android:id="@+id/manufacturer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lorem_ipsum"
+        android:text="@string/manufacturer"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -21,7 +21,7 @@
         android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lorem_ipsum"
+        android:text="@string/item_name"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/manufacturer_name"
