--- a/app/src/main/res/layout/view_holder_add_item.xml
+++ b/app/src/main/res/layout/view_holder_add_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_weight="0.6"
+        android:maxLength="6"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/quantity_edit_text"
         app:layout_constraintTop_toTopOf="parent" />
