--- a/app/src/main/res/layout/fragment_view_inventory.xml
+++ b/app/src/main/res/layout/fragment_view_inventory.xml
@@ -171,7 +171,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="@string/add_button_text"
+        android:text="@string/edit_button_text"
         android:textAllCaps="true"
         android:textSize="24sp"
         android:textStyle="bold"
