--- a/app/src/main/res/layout/view_holder_add_item.xml
+++ b/app/src/main/res/layout/view_holder_add_item.xml
@@ -42,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/item_name"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sku_id_edit_text" />
 
