--- a/app/src/main/res/layout/fragment_view_inventory.xml
+++ b/app/src/main/res/layout/fragment_view_inventory.xml
@@ -113,6 +113,7 @@
             android:layout_marginEnd="32dp"
             android:padding="24dp"
             android:textSize="18sp"
+            tools:listitem="@layout/view_holder_spinner_unit"
             app:layout_constraintBottom_toBottomOf="@+id/item_search_box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/item_search_box"
