--- a/app/src/main/res/layout/fragment_view_inventory.xml
+++ b/app/src/main/res/layout/fragment_view_inventory.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.ViewInventoryFragment">
+    tools:context=".ui.main.InventoryFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
