--- a/app/src/main/res/layout/view_holder_add_item.xml
+++ b/app/src/main/res/layout/view_holder_add_item.xml
@@ -30,8 +30,7 @@
         android:id="@+id/close_edit_row"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@android:drawable/radiobutton_off_background"
-        android:backgroundTint="@android:color/holo_red_light"
+        android:background="@drawable/close_icon"
         app:layout_constraintBottom_toBottomOf="@id/quantity_edit_text"
         app:layout_constraintLeft_toRightOf="@id/quantity_edit_text"
         app:layout_constraintRight_toRightOf="parent"
