Debounce Text Watcher

--- a/app/src/main/res/layout/view_holder_add_item.xml
+++ b/app/src/main/res/layout/view_holder_add_item.xml
@@ -10,8 +10,12 @@
         android:id="@+id/sku_id_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="0.6"
+        android:layout_margin="4dp"
+        android:background="@drawable/list_item_border"
+        android:hint="@string/hint_enter_sku_id"
         android:maxLength="6"
+        android:padding="8dp"
+        app:layout_constraintHorizontal_weight="0.6"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/quantity_edit_text"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +24,11 @@
         android:id="@+id/quantity_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:background="@drawable/list_item_border"
+        android:hint="@string/hint_enter_qty"
         android:inputType="number"
+        android:padding="8dp"
         app:layout_constraintHorizontal_weight="0.3"
         app:layout_constraintLeft_toRightOf="@id/sku_id_edit_text"
         app:layout_constraintRight_toLeftOf="@id/close_edit_row"
