App working with service deployed in Heroku

--- a/app/src/main/res/layout/view_holder_list_item.xml
+++ b/app/src/main/res/layout/view_holder_list_item.xml
@@ -4,7 +4,8 @@
     android:id="@+id/view_holder_list_item_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingVertical="12dp"
+    android:paddingHorizontal="16dp"
     android:background="@drawable/list_item_border"
     android:layout_marginBottom="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
